
Improvements
---------------------

(No changes)

Optimizations
---------------------
* GITHUB#14011: Reduce allocation rate in HNSW concurrent merge. (Viliam Durina)
* GITHUB#14022: Optimize DFS marking of connected components in HNSW by reducing stack depth, improving performance and reducing allocations. (Viswanath Kuchibhotla)

Bug Fixes
---------------------
* GITHUB#14049: Randomize KNN codec params in RandomCodec. Fixes scalar quantization div-by-zero
  when all values are identical. (Mike Sokolov)

* GITHUB#14075: Remove duplicate and add missing entry on brazilian portuguese stopwords list. (Arthur Caccavo)

Other
---------------------

* GITHUB#14229: Bump minimum required Java version to 25

======================= Lucene 10.2.0 =======================

API Changes
---------------------
* GITHUB#14069: Added DocIdSetIterator#intoBitSet API to let implementations
  optimize loading doc IDs into a bit set. (Adrien Grand)

* GITHUB#14134: Added Bits#applyMask API to help apply live docs as a mask on a
  bit set of matches. (Adrien Grand)

* GITHUB#14209: Deprecate Operations.union(Automaton,Automaton) and
  concatenate(Automaton,Automaton) in favor of the methods taking List.  (Robert Muir)

* GITHUB#14236: CombinedFieldQuery moved from lucene-sandbox to lucene-core.
  (Adrien Grand)

* GITHUB#14282: Remove redundant field argument from the DocIdSetBuilder constructor that takes a
  PointValues instance. (Luca Cavanna)

* GITHUB#14289: The unused public static DocIdSet#all method has been deprecated.
  (Luca Cavanna)

* GITHUB#14292: The redundant DocIdSet#bits method has been deprecated. (Luca Cavanna)

* GITHUB#14237: Add utils for sandbox facets module for the most common tasks. (Egor Potemkin)

* GITHUB#14312: Added DocIdSetIterator#docIDRunEnd to let iterators tell when
  they have runs of matches. This is then leveraged by conjunctions to
  automatically ignore clauses that have long runs of matches over these runs,